--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
     background-color: #f5f5f5;
+    margin-top: 8em;
+    font-family:'Roboto';
+    letter-spacing: 2px;
   }
     
   .container {
@@ -13,6 +18,7 @@ body {
   
   .form-type {
     margin-bottom: 15px;
+    margin-top: 20px;
   }
   
   label {
@@ -39,6 +45,12 @@ body {
   
   input:focus {
     outline: none;
+  }
+
+  .error-msg {
+    color: red;
+    margin-top: 10px;
+    letter-spacing: normal;
   }
   
   textarea {
