--- a/style.css
+++ b/style.css
@@ -78,36 +78,29 @@ body {
   }
 
   /* fake Loading spinner */
-  .dot-spinner {
-    display: flex;
+.spinner {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid green;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 1s linear infinite;
+  }
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+#loading {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(49, 49, 49, 0.8);
+    z-index: 9999;
     justify-content: center;
     align-items: center;
-    gap: 8px;
-    margin-bottom: 10px;
-  }
-  
-  .dot-spinner div {
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    border-radius: 50%;
-    animation: bounce 0.6s infinite alternate;
-  }
-  
-  .dot-spinner div:nth-child(2) {
-    animation-delay: 0.2s;
-  }
-  
-  .dot-spinner div:nth-child(3) {
-    animation-delay: 0.4s;
-  }
-  
-  @keyframes bounce {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-10px);
-    }
   }
   
