--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     background-color: #f5f5f5;
-    margin-top: 8em;
+    margin-top: 2em;
     font-family:'Roboto';
     letter-spacing: 2px;
   }
@@ -11,9 +11,10 @@ body {
     background: white;
     padding: 20px;
     max-width: 500px;
+   
     margin: auto;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 2px 4px 15px rgba(0,0,0,0.7);
   }
   
   .form-type {
@@ -69,6 +70,8 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    display: block;
+    margin: auto;
   }
   
   button:hover {
